# advent-stars

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml  Dockerfile
api/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
svg/: Cargo.toml
svg/src/: lib.rs  validation.rs
