[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
moka = { version = "0.12", features = ["sync"] }
reqwest = { version = "0.12", default-features=false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.41", features = ["full", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11", features = ["v4"] }
svg = { path = "../svg" }
